주석 및 프로젝트 정리